/*
 * identifiers.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021-2025 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

// make sure to use this package naming convention:
// com.apple.foundationdb.relational.yamltests.generated.<name_of_test_suite>
// adding "generated" is important to exclude the generated Java file from Jacoco reports.
// suffixing the namespace with your test name is important for segregating similarly-named
// generated-Java-classes (such as RecordTypeUnion) into separate packages, otherwise you
// get an error from `protoc`.
package com.apple.foundationdb.relational.yamltests.generated.identifierstests;

option java_outer_classname = "IdentifiersTestProto";

import "record_metadata_options.proto";

message T1 {
  int64 ID = 1;
  int64 T1__2COL1 = 2;
  int64 T1__2COL2 = 3;
}

message T2 {
  int64 ID = 1;
  int64 T2__1COL1 = 2;
  int64 T2__1COL2 = 3;
}

enum __T3__2ENUM {
  T3__2E__2A = 0;
  T3__2E__2B = 1;
  T3__2E__2C = 2;
}

message __T3 {
  int64 ID = 1;
  int64 __T3__1COL1 = 2;
  int64 __T3__1COL2 = 3;
  optional __T3__2ENUM __T3__1COL3 = 4;
}

message internal {
  int64 a = 1;
  int64 b = 2;
}

message T4 {
  int64 ID = 1;
  internal ___hidden = 2;
  int64 T4__2COL1 = 3;
  int64 T4__2COL2 = 4;
}

message T5__UNESCAPED {
  int64 ID = 1;
  int64 T5__COL1 = 2;
  int64 __T5__COL2 = 3;
}

enum T6__2__ENUM__0 {
  A = 0;
  B__0 = 1;
  C__ = 2;
  __D__2__ = 3;
}

message ___T6__2__UNESCAPED {
  int64 ID = 1;
  int64 T6__1__COL1__0 = 2;
  int64 __T6__2COL2__VALUE = 3;
  optional T6__2__ENUM__0 T6__1__ENUM_1 = 4;
  optional T6__2__ENUM__0 T6__1__ENUM_2 = 5;
}

message RecordTypeUnion {
  T1 _T1 = 1;
  T2 _T2 = 2;
  __T3 ___T3 = 3;
  T4 _T4 = 4;
  T5__UNESCAPED _T5__UNESCAPED = 5;
  ___T6__2__UNESCAPED ____T6__2__UNESCAPED = 6;
}
